--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,25 @@
   text-align: center;
 }
 
+.navbar{
+  position: fixed;
+  top: 0;
+  height: 20%;
+  margin-left:5%;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  z-index: 1;
+}
+
+
+
 .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
+  
 }
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
@@ -17,6 +31,26 @@
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
+
+
+
+
+
+.logo-brady {
+  padding: 1.5em;
+  will-change: filter;
+  transition: filter 300ms;
+  border-radius: 50%;
+}
+.logo-brady:hover {
+  color:white;
+  background-color: #646cffaa;
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
+
+
+
+
 /*
 @keyframes logo-spin {
   from {
@@ -46,6 +80,7 @@
   box-shadow: 0 1px 1px rgba(0,0,0,0.11),0 2px 2px rgba(0,0,0,0.11),0 4px 4px rgba(0,0,0,0.11),0 6px 8px rgba(0,0,0,0.11),0 8px 16px rgba(0,0,0,0.11);
   margin-right: 5%;
   margin-left: 5%;
+  z-index: 3;
 }
 
 .video{
